# ai-for-developers-project-387

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  my2.local.md  render.yaml
.github/workflows/: opencode-lighthouse-cron.yml  opencode-lighthouse-manualy.yml
backend/: .env  Dockerfile  alembic.ini  dependencies.py  entrypoint.sh  exceptions.py  main.py  pyproject.toml  settings.py
backend/.agents/skills/http_handler/: SKILL.md
backend/.agents/skills/migrations/: SKILL.md
backend/clients/: database.py
backend/migrations/: env.py
backend/migrations/versions/: 0068a2c6b49d_create_event_type_and_booking_tables.py
backend/models/: __init__.py  booking.py  event_type.py
backend/repositories/: booking.py  event_type.py
backend/routers/: admin_bookings.py  admin_event_types.py  public_bookings.py  public_event_types.py
backend/schemas/: booking.py  event_type.py  slot.py
backend/use_cases/: booking.py  event_type.py
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: api.fixture.ts  test-data.ts
e2e/mock/: server.js
e2e/pages/: admin-bookings.page.ts  admin-dashboard.page.ts  admin-event-types.page.ts  book-event.page.ts  book.page.ts  home.page.ts
e2e/pages/components/: booking-form.component.ts  calendar.component.ts  event-type-form.component.ts  (+2 more)
e2e/playwright-report/: index.html
frontend/: .env  Dockerfile  entrypoint.sh  package-lock.json  package.json  tailwind.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/src/: hooks.server.ts
(+45 files in other folders)
