[tool.poetry]
name = "mini-cal-backend"
version = "0.1.0"
description = "Mini Cal API — booking call service"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115"
uvicorn = {version = ">=0.34", extras = ["standard"]}
sqlalchemy = ">=2.0"
psycopg2-binary = ">=2.9"
alembic = ">=1.14"
pydantic = ">=2.0"
redis = ">=5.0"
pydantic-settings = "^2.14.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"